[package]
name = "rustic-prometheus-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18" }
serde = { version = "1.0.228", features = ["derive"] }
axum = "0.8.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
config = "0.15.21"
clap = { version = "4.6.0", features = ["derive"] }
metrics = { version = "0.24.3" }
metrics-exporter-prometheus = { version = "0.18.1", features = ["tokio"] }
rustic_core = "0.10.1"
rustic_backend = "0.6.1"
