[package]
name = "rustic-prometheus-exporter"
description = "A Prometheus exporter for Restic repositories, utilising Rustic."
repository = "https://github.com/wtaylor/rustic-prometheus-exporter"
homepage = "https://github.com/wtaylor/rustic-prometheus-exporter"
readme = "README.md"
version = "0.2.1"
edition = "2024"
authors = ["William Taylor"]
license = "MIT OR Apache-2.0"

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWRkYd0KpuFAJrAXG06LIDn6rZEjuDV3c5d/mzuOXZd/b2Cv/9zZroAs"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18" }
serde = { version = "1.0.228", features = ["derive"] }
axum = "0.8.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
config = "0.15.21"
clap = { version = "4.6.0", features = ["derive"] }
kameo = { version = "0.20.0" }
kameo_actors = "0.5.0"
humantime-serde = { version = "1.1.1" }
metrics = { version = "0.24.3" }
metrics-exporter-prometheus = { version = "0.18.1", features = ["tokio"] }
rustic_core = "0.11.0"
rustic_backend = "0.6.1"
reqwest = { version = "0.12.28", default-features = false }
